Work around Windows-isms. RFC 2445 clearly says that all linebreaks are always \r\n, even under Unix, where \n is used for text files. Just because windows apparently adds the \r automatically, when you add a \n, does not mean that other platforms will do the same. Here in Linux, the file contains exactly what you put into the char*, which is a \n only and thus invalid.

CCMAIL: libical@softwarestudio.org
BUG: 140650

svn path=/branches/KDE/3.5/kdepim/; revision=627420